2009-10-27  Chris Fleizach  <cfleizach@apple.com>

        No review.

        ARIA menu/menu item need AXRoleDescription
        https://bugs.webkit.org/show_bug.cgi?id=30804

        Layout test fix for Tiger/Leopard.

        * platform/mac-leopard/accessibility/table-with-aria-role-expected.txt:

2009-10-27  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Adele Peterson.

        WAI-ARIA: add support for 'presentation' role
        https://bugs.webkit.org/show_bug.cgi?id=30806

        * accessibility/aria-presentational-role-expected.txt: Added.
        * accessibility/aria-presentational-role.html: Added.

2009-10-27  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.

        ARIA menu/menu item need AXRoleDescription
        https://bugs.webkit.org/show_bug.cgi?id=30804

        * platform/mac/accessibility/aria-menu-role-descriptions-expected.txt: Added.
        * platform/mac/accessibility/aria-menu-role-descriptions.html: Added.
        * platform/mac/accessibility/table-with-aria-role-expected.txt:

2009-10-27  Steve Block  <steveblock@google.com>

        Reviewed by Darin Adler.

        When a Geolocation method is called, immediately calls the error calback asynchronously if permissions have already been denied.
        https://bugs.webkit.org/show_bug.cgi?id=27944.

        * fast/dom/Geolocation/resources/permission-denied-already-error.js: Added. Tests that when permission has already been denied, the error callback is invoked with code PERMISSION_DENIED, when the Geolocation service reports an error.
        * fast/dom/Geolocation/permission-denied-already-error.html: Added. Wrapper for above test.
        * fast/dom/Geolocation/permission-denied-already-error-expected.txt: Added. Expected result for above test.