@@ -1,3 +1,12 @@
+2009-10-27  Joseph Pecoraro  <joepeck@webkit.org>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: Move runAfterPendingDispatches to TestController for Clarity
+        https://bugs.webkit.org/show_bug.cgi?id=30844
+
+        * inspector/console-format-collections.html: updated to reflect TestController change
+
 2009-10-27  Chris Fleizach  <cfleizach@apple.com>
 
         No review.
